<resources>
    <string name="app_name">eTutor</string>
    <string name="a1">Search</string>
    <string name="a2">Don\'t have an account? Create a new account </string>
    <string name="a3">Login</string>
    <string name="a4">Here</string>
    <string name="a5">Registration</string>
    <string name="a6">Enter your Name....</string>
    <string name="a7">Enter your Email....</string>
    <string name="a8">Enter your PhoneNumber....</string>
    <string name="a9">Enter your email here, a password reset mail will be sent there....</string>
    <string name="a10">Send</string>
    <string name="a11">Okay</string>
    <string name="a12">Your account has not verified yet, please verify it first or request to resend mail from here.</string>
    <string name="a13">Resend Mail</string>
    <string name="a14">eTutor</string>
    <string name="a15">Find Posts</string>
    <string name="a16">Create Posts</string>
    <string name="a17">Profile</string>
    <string name="a18">My Profile</string>
    <string name="a19">Logout</string>
    <string name="a20">Edit Profile</string>
    <string name="a21">Change Password</string>
    <string name="a22">Save</string>
    <string name="a23">Are you sure to Logout? You have to login again later....</string>
    <string name="a24">Yes</string>
    <string name="a25">No</string>
    <string name="a26">Change Password</string>
    <string name="a27">Confirm</string>
    <string name="a28">Enter Title: </string>
    <string name="a29">Enter here.....</string>
    <string name="a30">Enter Post: </string>
    <string name="a31">Student Category: </string>
    <string name="a32">Enter Subjects: </string>
    <string name="a33">Preferred Salary Range: </string>
    <string name="a34">Contact Details: </string>
    <string name="a35">Create Post</string>
    <string name="a36">Additional Info:</string>
    <string name="a37">Show Details</string>
    <string name="a38">Posted By: </string>
    <string name="a39">No Post Found!</string>
    <string name="a40">Select Image</string>
    <string name="a41">Upload</string>
    <string name="a42">Forgot Password?</string>
    <string name="a43">Welcome! Please login or register to \ncontinue! </string>
    <string name="a44">A previous login record has been found, do you want to login now?</string>
    <string name="a45">Uploading....</string>
</resources>