<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/pro_name_pic"
                app:civ_border_color="#B5B5B5"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:drawableTopCompat="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/profile_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ed4"
            android:fontFamily="@font/coda"
            android:paddingStart="8dp"
            android:paddingEnd="2dp"
            android:text="@string/a41" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/a18"
            android:textColor="#252525"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ed1"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ed1"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="8dp" />

        <EditText
            android:id="@+id/editTextPhone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ed1"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="phone"
            android:padding="8dp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:text="Gender:"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textColor="#494949" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textColor="#494949" />
        </RadioGroup>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ed5"
            android:drawableStart="@drawable/ic_logout"
            android:fontFamily="@font/coda"
            android:paddingStart="8dp"
            android:paddingEnd="2dp"
            android:text="@string/a19" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ed4"
            android:drawableStart="@drawable/ic_edit"
            android:fontFamily="@font/coda"
            android:paddingStart="8dp"
            android:paddingEnd="2dp"
            android:text="@string/a20" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ed4"
            android:drawableStart="@drawable/ic_change_pass"
            android:fontFamily="@font/coda"
            android:paddingStart="8dp"
            android:paddingEnd="2dp"
            android:text="@string/a21" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ed2"
            android:text="@string/a22"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass1" />

    </LinearLayout>
</ScrollView>